--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
+    "gsap": "^3.5.1",
     "lodash": "^4.17.20",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
@@ -20,6 +21,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "dev": "netlify dev",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
